--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "OTMxOTYzMDc5ODM3NzQ1MjE0.YeMEQQ.D6NhmzXfQBL6od_nY9QbvxYsIuM",
+    "token": "token",
     "footer": "Mega 💖 Thealoq",
     "footer2": "Thealoq 💗 Mega",
     "url": "mongodb://localhost/thealoq"
