thealoq was here

--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
-    "token": "token",
+    "token": "OTMxOTYzMDc5ODM3NzQ1MjE0.YeMEQQ.B9z3HpkgT78Vx9ZTSMI_aPEBW8k",
     "footer": "Mega 💖 Thealoq",
     "footer2": "Thealoq 💗 Mega",
     "url": "mongodb://localhost/thealoq",
-    "kategori": "kategori id"
+    "kategori": "937444236087926794"
 }
